--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
     "@nextui-org/react": "^2.2.10",
+    "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
@@ -28,6 +29,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prisma": "^5.12.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
