--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.15",
+    "@mui/x-data-grid": "^7.1.1",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.12.1",
     "axios": "^1.6.8",
+    "cloudinary": "^2.1.0",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
